[metadata]
# TODO: investigate git integration with tags
version = 0.1.0
name = tessia_baselib
author = IBM
summary = Gateway component of tessia solution
description-file = README.md
home-page = https://gitlab.com/tessia-project
license = Apache 2.0
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
keywords =
    hypervisors
    guests

[files]
packages =
    tessia_baselib
data_files =
    etc/tessia_baselib = etc/*

# for executing unit tests with 'setup.py test'
[test]
test_suite = tests.unit

# for creating spec files to build rpm package
[bdist_rpm]
packager = IBM

