[metadata]
name = tessia-baselib
author = IBM
summary = Abstraction layer for communication with IBM Z hypervisors/guests
description-file = README.md
home-page = https://gitlab.com/tessia-project
license = Apache 2.0
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Hardware :: Mainframes
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
keywords =
    communication
    installation
    guest
    hypervisor
    systemz

[files]
packages =
    tessia/baselib
namespace_packages =
    tessia
data_files =
    etc/tessia = etc/*
